@@ -2,6 +2,7 @@ Release history for Perl module HTML::Diff
 
 0.57 2014-03-26
     - Reformatted this file as per CPAN::Changes::Spec
+    - Makefile.PL get version from module source
 
 0.561 2006-11-07
     - Unknown content
